force-app/main/default/objects/pse__Group_Plan__c/pse__Group_Plan__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__GroupPlanHelp</customHelpPage>
    <description>Captures planned bookings, billings, costs, margin, revenue, and utilization for the group over a defined time period. Apart from services forecasting, fields on this object are not validated (other than for format) or used in any formulae. Groups and time periods have a master-detail relationship with group plans.</description>
    <label>Group Plan</label>
    <nameField>
        <displayFormat>GP-{0}</displayFormat>
        <label>Group Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>