force-app/main/default/objects/pse__Group_Plan__c/fields/pse__Planned_Internal_Costs__c.field-meta.xml
<CustomField>
    <fullName>pse__Planned_Internal_Costs__c</fullName>
    <label>Planned Internal Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>